update example workflow to use "deploy-environment" input
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/generic-amd64.yml
+++ b/.github/workflows/generic-amd64.yml
@@ -47,7 +47,7 @@ jobs:
     secrets: inherit
     with:
       machine: generic-amd64
-      environment: balena-staging.com
+      deploy-environment: balena-staging.com
       # device-repo and device-repo-ref inputs should not be provided on device repos
       device-repo: balena-os/balena-generic
       device-repo-ref: master
