fix check of finalize value
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -533,7 +533,7 @@ jobs:
 
       # Separate this evaluation into its own step + output, as we use this logic in several places and its easier to manage this way
       - name: Evaluate whether to finalize release
-        if: steps.merge-test-result.outputs.finalize || inputs.force-finalize
+        if: steps.merge-test-result.outputs.finalize == 'true' || inputs.force-finalize
         id: should-finalize
         run: |
           echo "finalize=true" >> $GITHUB_OUTPUT
