alter trigger in test workflow
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/genericx86-64-ext.yml
+++ b/.github/workflows/genericx86-64-ext.yml
@@ -16,10 +16,10 @@ on:
     branches:
       - "main"
       - "master"
-  pull_request_target:
-    branches:
-      - "main"
-      - "master"
+  # pull_request_target:
+  #   branches:
+  #     - "main"
+  #     - "master"
   # Enable this push trigger on device repos
   # push:
   #   tags:
