--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1138,6 +1138,9 @@ jobs:
           path: ${{ env.WORKSPACE }}
 
       - name: Decrypt artifacts
+        if: |
+          github.event.repository.private != true &&
+          (inputs.sign-image == true || needs.build.outputs.is_private == 'true')
         working-directory: ${{ env.WORKSPACE }}
         run: |
           for artifact in *.enc **/*.enc; do
