--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -562,9 +562,13 @@ jobs:
             -d "${MACHINE}" \
             -t "${{ secrets.BALENA_API_DEPLOY_KEY }}" \
             -s "${SHARED_BUILD_DIR}" \
-            -g "${BARYS_ARGUMENTS_VAR}"
+            -g "${BARYS_ARGUMENTS_VAR}" | tee balena-build.log
 
           if grep -R "ERROR: " build/tmp/log/*; then
+            exit 1
+          fi
+
+          if ! grep -q "Build for ${{ inputs.machine }} suceeded" balena-build.log; then
             exit 1
           fi
 
