github/workflows/yocto-build-deploy.yml: Add supervisor version to OS contract
Change-type: patch
Signed-off-by: Florin Sarbu <florin@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -732,6 +732,7 @@ jobs:
 
           if [ -f "${WORKSPACE}/balena.yml" ]; then
             echo -e "\nversion: ${VERSION}" >> "${WORKSPACE}/balena.yml"
+            echo "supervisorVersion: `cat ${DEPLOY_PATH}/VERSION`" >> "${WORKSPACE}/balena.yml"
             if [ "${{ inputs.sign-image }}" = "true" ]; then
               sed -i '/provides:/a \  - type: sw.feature\n    slug: secureboot' "/${WORKSPACE}/balena.yml"
             fi
